fixing spacing of modal buttons

--- a/web/src/styles/Modal.css
+++ b/web/src/styles/Modal.css
@@ -98,7 +98,8 @@ input {
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
-    width: 100%;
+    width: auto;
+    gap: 25px;
 
 }
 
